test/types/seq/bradc/emptySeq3.good
emptySeq3.chpl:1: error: type mismatch in assignment from nil to list(int)
