test/types/seq/bradc/emptySeq3.chpl
var s: seq(integer) = nil;

writeln("s is: ", s);
